<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/spokenTXT"
        android:layout_marginTop="50dp"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/txtAppear"/>

    <ImageButton
        android:id="@+id/mic"
        android:layout_marginTop="50dp"
        android:layout_width="150px"
        android:layout_height="150px"
        android:layout_gravity="center"
        android:background="@drawable/mic"
        android:onClick="onMic"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="23dp"
        android:textColor="@color/black"
        android:text="@string/txtTap"/>

    <EditText
        android:id="@+id/readTXT"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtPhone"/>

    <Button
        android:id="@+id/btnSpeak"
        android:layout_width="match_parent"
        android:layout_height="110px"
        android:text="@string/speak"
        android:onClick="tekstkõneks"/>

    <Button
        android:id="@+id/btnStop"
        android:layout_width="match_parent"
        android:layout_height="110px"
        android:text="@string/stop"
        android:onClick="tekstkõneks"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="110px"
        android:text="@string/clear"
        android:onClick="onClear"/>




</LinearLayout>